--- a/templates/home/menu.html.twig
+++ b/templates/home/menu.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <header>
-        <nav class="navbar" style="background: #4D0080; color: #fff;">
+        <nav class="navbar navbar-expand-lg navbar-dark special-color-dark">
             <h3 class="text-left">DGT Creator Services</h3>
             <p class="text-right">Digital Learning Content Manager</p>
         </nav>
