--- a/templates/home/menu.html.twig
+++ b/templates/home/menu.html.twig
@@ -5,8 +5,13 @@
 {% block body %}
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark special-color-dark">
-            <h3 class="text-left">DGT Creator Services</h3>
-            <p class="text-right">Digital Learning Content Manager</p>
+            <a class="navbar-brand" href="#">DGT Creator Services</a>      
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto"></ul>
+                <span class="navbar-text white-text">
+                    Digital Learning Content Manager
+                </span>
+            </div>         
         </nav>
     </header>
     <style>
