--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,79 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark special-color-dark">
+                <a class="navbar-brand" href="#">DGT Creator Services</a>      
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav mr-auto"></ul>
+                    <span class="navbar-text white-text">
+                        Digital Learning Content Manager
+                    </span>
+                </div>         
+            </nav>
+            <script>
+                function FermerMenu(){
+                    document.getElementById('DC1').style.left = '-90px';
+                    document.getElementById('DC2').style.left = '-90px';
+                    document.getElementById('DC3').style.left = '-90px';
+                    document.getElementById('DC4').style.left = '-90px';
+                    document.getElementById('DC5').style.left = '-90px';
+                }
+
+                function OuvrirMenu(){
+                    document.getElementById('DC1').style.left = '-0px';
+                    document.getElementById('DC2').style.left = '-0px';
+                    document.getElementById('DC3').style.left = '-0px';
+                    document.getElementById('DC4').style.left = '-0px';
+                    document.getElementById('DC5').style.left = '-0px';
+                }
+            </script>
+            <style>
+                #sidebar {
+                    min-width: 270px;
+                    max-width: 270px;
+                    background: #fff;
+                    color: #000000;
+                }
+
+                #sidebar.active {
+                    min-width: 80px;
+                    max-width: 80px;
+                    text-align: center;
+                }
+
+                #sidebar.active ul.components li a {
+                    padding: 10px 0;
+                }
+
+                #sidebar ul li a {
+                    padding: 10px 30px;
+                    display: block;
+                    color: black;
+                }
+
+            </style>
+        </header>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <footer class="page-footer font-small" style="color:white; position: absolute; bottom: 0; left: 0; right: 0; background-color: #3F729B;">
+            <div class="footer-copyright py-3">
+                <table width="100%">
+                    <tr width="100%">
+                        <td width="5%"></td>
+                        <td width="45%" class="text-left">
+                            © 
+                            <a href="#"> Supercharged by DGT Concept </a>
+                        
+                        </td>
+                        <td width="45%" class="text-right">
+                            © 
+                            <a href="#"> Powered By TALENSOFT </a>
+                        </td>
+                        <td width="5%"></td>
+                    </tr>
+                </table>
+            </div>
+        </footer>
     </body>
 </html>
