--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,16 +6,17 @@
     <style>
         body{
             background-color:#3F729B;
+            background-image: url();
         }
     </style>
-    <main style="background-color:#3F729B;">
+    <main style="background-color:#3F729B;height: 100%;">
         <br/><br/>
             <div class="container">
                 <div class="row">
                   <div class="col-sm"></div>
                   <div class="col-sm" style="background-color : rgb(255, 255, 255);">
                     <br/>
-                        <form>
+                        <form action="'{{path("menu")}}'">
                             <h3 class="text-center">Authentification</h3>
                             <br/>
                              <!-- Email -->
