--- a/templates/back_office/modifierUtilisateur.html.twig
+++ b/templates/back_office/modifierUtilisateur.html.twig
@@ -6,30 +6,8 @@
 
 <table width="100%" height="100%">
     <tr width="100%" height="100%">
-        <td onmouseover="OuvrirMenu()" width="0%">
-            <!-- Menu latéral -->
-            <div class="wrapper d-flex align-items-stretch">
-                <nav id="sidebar" class="active">
-                    <ul class="list-unstyled components mb-5">
-                    <li class="active">
-                        <a href="#"><img src="image/DC1.jpg" id="DC1" height="100px" style="position: relative;"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="image/DC2.jpg" id="DC2" height="100px" style="position: relative;"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="image/DC3.jpg" id="DC3" height="100px" style="position: relative;"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="image/DC4.jpg" id="DC4" height="100px" style="position: relative;"/></a>
-                    </li>
-                    <li>
-                        <a href="#"><img src="image/DC5.jpg" id="DC5" height="100px" style="position: relative;"/></a>
-                    </li>
-                    </ul>
-                </nav>
-            </div>
-        </td>
+       {% include 'menu_deroulant.html.twig' %}
+
         <td width="100%" class="text-center" onmouseover="FermerMenu()">
             <!-- Contenu de la page -->
             <div class="text-align center">      
