--- a/templates/back_office/index.html.twig
+++ b/templates/back_office/index.html.twig
@@ -32,8 +32,8 @@
                                             <td style="vertical-align: middle;">{{unAdmin.nom}}</td>
                                             <td style="vertical-align: middle;">{{unAdmin.prenom}}</td>
                                             <td style="vertical-align: middle;">{{unAdmin.societe}}</td>
-                                            <td><a href='{{path("modifierAdmin", {'idAdmin': unAdmin.id})}}' type='button' class="btn btn-success btn-sm"><i class="fas fa-edit"></i></a></td>
-                                            <td>
+                                            <td style="vertical-align: middle;"><a href='{{path("modifierAdmin", {'idAdmin': unAdmin.id})}}' type='button' class="btn btn-primary btn-sm"><i class="fas fa-edit"></i></a></td>
+                                            <td style="vertical-align: middle;">
                                                 <form action="{{ path('supprimerAdmin', {idAdmin : unAdmin.id})}}" method="post" onSubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet Administrateur ?')">
                                                     
                                                     <input type="hidden" name="_method" value="DELETE"></input>
@@ -66,8 +66,8 @@
                                                 <td style="vertical-align: middle;">{{unUtilisateur.nom}}</td>
                                                 <td style="vertical-align: middle;">{{unUtilisateur.prenom}}</td>
                                                 <td style="vertical-align: middle;">{{unUtilisateur.idAppartenir.libelle}}</td>
-                                                <td><a href='{{path("modifierUtilisateur", {'idUtilisateur': unUtilisateur.id})}}' type='button' class="btn btn-success btn-sm"><i class="fas fa-edit"></i></a></td>
-                                                <td>
+                                                <td style="vertical-align: middle;"><a href='{{path("modifierUtilisateur", {'idUtilisateur': unUtilisateur.id})}}' type='button' class="btn btn-primary btn-sm"><i class="fas fa-edit"></i></a></td>
+                                                <td style="vertical-align: middle;">
                                                     <form action="{{ path('supprimerUtilisateur', {idUtilisateur : unUtilisateur.id})}}" method="post" onSubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet Utilisateur ?')">
                                                         <input type="hidden" name="_method" value="DELETE"></input>
                                                         <input type="hidden" name="_token" value="{{csrf_token('delete'~ unUtilisateur.id)}}"></input>
