--- a/templates/menu_deroulant.html.twig
+++ b/templates/menu_deroulant.html.twig
@@ -18,6 +18,9 @@
             <li>
                 <a href="#"><img src="{{ asset('image/'~ 'btn_help.png')}}" id="DC5" height="100px" style="position: relative;"/></a>
             </li>
+            <li>
+                <a href="{{path('back_office')}}"><img src="{{ asset('image/'~ 'btn_backoffice.png')}}" id="DC6" height="100px" style="position: relative;"/></a>
+            </li>
             </ul>
         </nav>
     </div>
