--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -82,6 +82,7 @@
         </header>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <br/><br/>
         <footer class="page-footer font-small" style="color:white; position: absolute; bottom: 0; left: 0; right: 0; background-color: #3F729B;">
             <div class="footer-copyright py-3">
                 <table width="100%">
@@ -94,7 +95,7 @@
                         </td>
                         <td width="45%" class="text-right">
                             © 
-                            <a href="#"> Powered By TALENSOFT </a>
+                            <a href="#"> Powered By TALENTSOFT </a>
                         </td>
                         <td width="5%"></td>
                     </tr>
