--- a/templates/back_office/gererAdmin.html.twig
+++ b/templates/back_office/gererAdmin.html.twig
@@ -8,10 +8,11 @@
 
         <td width="100%" class="text-center" onmouseover="FermerMenu()">
             <!-- Contenu de la page -->
-            <div class="text-align center">      
-               <div class="container">
+            <div class="text-align center">
+                <div class="container">
                     <div class="row">
                         <div class="col-sm"></div>
+                        {% if theUser.role == 0 %}
                         <div class="col-sm bg-white">
                             <br/>
                             {{ form_start(form) }}
@@ -31,22 +32,29 @@
                                     <label>Numéro de téléphone</label>
                                     {{ form_widget(form.telephone, { attr: {'class': 'form-control'} })}}
                                 </div>
+
+
                                 <div class="form-group">     
-                                    <label>Numéro de portable</label>
+                                    <label>Numéro de téléphone portable</label>
                                     {{ form_widget(form.portable, { attr: {'class': 'form-control'} })}}
                                 </div>
+
+                          
                                 <div class="form-group">     
-                                    <label>Nombre de licences maximum</label>
+                                    <label>Nombre de licence maximum autorisé</label>
                                     {{ form_widget(form.nblicence, { attr: {'class': 'form-control'} })}}
                                 </div>
                                 <div class="form-group">     
-                                    <label>Verrouiller le nombre de licence maximum</label>
+                                    <label>Verrouiller nombre de licence</label>
                                     {{ form_widget(form.verrounblicence, { attr: {'class': 'form-control'} })}}
                                 </div>
                                 <div class="form-group">     
                                     <label>Société</label>
                                     {{ form_widget(form.societe, { attr: {'class': 'form-control'} })}}
                                 </div>
+
+                                
+
                                 <div class="form-group">     
                                     <label>Identifiant</label>
                                     {{ form_widget(form.login, { attr: {'class': 'form-control'} })}}
@@ -55,15 +63,13 @@
                                     <label>Mot de passe</label>
                                     {{ form_widget(form.mdp, { attr: {'class': 'form-control'} })}}
                                 </div>
-                                <div class="form-group">     
-                                    <label></label>
-                                    {{ form_widget(form.idControler, { attr: {'class': 'form-control'} })}}
-                                </div>
+
                                 
-                                <button type="submit" class="btn btn-primary">Ajouter</button>
+                                <button type="submit" class="btn btn-primary">Valider</button>
                             {{ form_end(form) }}
                             <br/>
                         </div>
+                        {% endif %}
                         <div class="col-sm"></div>
                     </div>
                 </div>
@@ -76,5 +82,4 @@
         position: relative;
     }
 </style>
-
 {% endblock %}
