--- a/templates/back_office/gererUtilisateur.html.twig
+++ b/templates/back_office/gererUtilisateur.html.twig
@@ -12,6 +12,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm"></div>
+                        {% if theUser.role == 0 %}
                         <div class="col-sm bg-white">
                             <br/>
                             {{ form_start(form) }}
@@ -31,6 +32,20 @@
                                     <label>Numéro de téléphone</label>
                                     {{ form_widget(form.telephone, { attr: {'class': 'form-control'} })}}
                                 </div>
+
+
+                                <div class="form-group">     
+                                    <label>Numéro de téléphone portable</label>
+                                    {{ form_widget(form.portable, { attr: {'class': 'form-control'} })}}
+                                </div>
+
+                               
+                                <div class="form-group">     
+                                    <label>Service</label>
+                                    {{ form_widget(form.idAppartenir, { attr: {'class': 'form-control'} })}}
+                                </div>
+        
+
                                 <div class="form-group">     
                                     <label>Identifiant</label>
                                     {{ form_widget(form.login, { attr: {'class': 'form-control'} })}}
@@ -39,18 +54,12 @@
                                     <label>Mot de passe</label>
                                     {{ form_widget(form.mdp, { attr: {'class': 'form-control'} })}}
                                 </div>
-                                <div class="form-group">     
-                                    <label></label>
-                                    {{ form_widget(form.idDiriger, { attr: {'class': 'form-control'} })}}
-                                </div>
-                                <div class="form-group">     
-                                    <label>Service</label>
-                                    {{ form_widget(form.idAppartenir, { attr: {'class': 'form-control'} })}}
-                                </div>
-                                <button type="submit" class="btn btn-primary">Ajouter</button>
+                                
+                                <button type="submit" class="btn btn-primary">Valider</button>
                             {{ form_end(form) }}
                             <br/>
                         </div>
+                        {% endif %}
                         <div class="col-sm"></div>
                     </div>
                 </div>
@@ -58,5 +67,9 @@
         </td>
     </tr>
 </table>
-
+<style>
+    body{
+        position: relative;
+    }
+</style>
 {% endblock %}
