--- a/templates/home/menu.html.twig
+++ b/templates/home/menu.html.twig
@@ -8,7 +8,7 @@
                 <td width="100%" class="text-center" onmouseover="FermerMenu()">
                     <!-- Contenu de la page -->
                     <div class="text-align center">
-                        <h1><strong>Bonjour Nicolas</strong></h1>
+                        <h1><strong>Bonjour {{theUser.prenom}}</strong></h1>
                         <h4><strong>Comment puis-je vous aider ?</strong></h4>
                     </div>
                 </td>
