--- a/templates/menu_deroulant.html.twig
+++ b/templates/menu_deroulant.html.twig
@@ -7,7 +7,7 @@
                 <a href="#"><img src="{{ asset('image/'~ 'btn_lcms.png')}}" id="DC1" height="100px" style="position: relative;"/></a>
             </li>
             <li>
-                <a href="#"><img src="{{ asset('image/'~ 'btn_lms.png')}}" id="DC2" height="100px" style="position: relative;"/></a>
+                <a href="{{path('tslms')}}"><img src="{{ asset('image/'~ 'btn_lms.png')}}" id="DC2" height="100px" style="position: relative;"/></a>
             </li>
             <li>
                 <a href="#"><img src="{{ asset('image/'~ 'btn_ts_academy.png')}}" id="DC3" height="100px" style="position: relative;"/></a>
