--- a/templates/menu_deroulant.html.twig
+++ b/templates/menu_deroulant.html.twig
@@ -4,7 +4,7 @@
         <nav id="sidebar" class="active">
             <ul class="list-unstyled components mb-5">
             <li class="active">
-                <a href="#"><img src="{{ asset('image/'~ 'btn_lcms.png')}}" id="DC1" height="100px" style="position: relative;"/></a>
+                <a href="{{path('tslcms')}}"><img src="{{ asset('image/'~ 'btn_lcms.png')}}" id="DC1" height="100px" style="position: relative;"/></a>
             </li>
             <li>
                 <a href="{{path('tslms')}}"><img src="{{ asset('image/'~ 'btn_lms.png')}}" id="DC2" height="100px" style="position: relative;"/></a>
